<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tourism Guide PK</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="str_btn_find">Find</string>
    <string name="hnt_et_location">Find Places..</string>
    <string name="desc">Main menu</string>
    <string name="search">Search Destination</string>
    <string name="searchBtn">Search</string>
    <string name="dest">Destination..</string>
    <string name="choose">Choose destinaton</string>
    <string name="or">Or</string>

</resources>
