<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   
    tools:context="com.hassanmaps.tourismguidepk.MainActivity"
    android:paddingTop="2dp" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        
        />
    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone" >

        <AutoCompleteTextView
            android:id="@+id/et_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:hint="@string/hnt_et_location"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/btn_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:contentDescription="@string/desc"
            android:src="@drawable/icon_search" />
    </LinearLayout>

    

    <LinearLayout
        android:id="@+id/mainLinear"
        android:layout_width="302dp"
        android:layout_height="176dp"
        android:layout_below="@+id/location_layout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="8dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <AutoCompleteTextView 
                android:id="@+id/et_dest"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:dropDownWidth="wrap_content"
                android:ems="10"
                android:hint="@string/dest"
                android:inputType="textCapSentences"
                android:imeOptions="actionSearch" >

                <requestFocus />
            </AutoCompleteTextView>

            <Button
                android:id="@+id/searchBtn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawableStart="@android:drawable/ic_menu_search"
                android:text="@string/searchBtn"
                android:textColor="@android:color/holo_red_light"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/back_Btn"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_alignEnd="@+id/mainLinear"
        android:layout_alignRight="@+id/mainLinear"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" 
        android:layout_marginBottom="14dp"
        
        android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha" />

</RelativeLayout>
